header and login maded

--- a/src/styles/blocks/header/header.css
+++ b/src/styles/blocks/header/header.css
@@ -1,5 +1,5 @@
 .header {
-  background: green;
+  padding-top: 40px;
   display: flex;
-  justify-content: space-between;
+  align-items: flex-end;
 }
