--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
 @import url(./styles/blocks/App/App.css);
 @import url(./styles/blocks/page/page.css);
 @import url(./styles/blocks/header/header.css);
+@import url(./styles/blocks/header/__logo/header__logo.css);
+@import url(./styles/blocks/header/__add-btn/header__add-btn.css);
 @import url(./styles/blocks/main/main.css);
 @import url(./styles/blocks/footer/footer.css);
 @import url(./styles/blocks/petition-form/petition-form.css);
