--- a/src/styles/blocks/user/__form/user__form.css
+++ b/src/styles/blocks/user/__form/user__form.css
@@ -1,6 +1,9 @@
 .user__form {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  row-gap: 20px;
   max-width: 255px;
   margin: 0 auto;
+
+  margin-bottom: 98px;
 }
