--- a/src/styles/blocks/user/__input/user__input.css
+++ b/src/styles/blocks/user/__input/user__input.css
@@ -1,9 +1,10 @@
-.user__question {
-  margin-top: auto;
-  margin-bottom: 40px;
+.user__input {
+  background: #F4F4F4;
+  border: none;
 
   font-family: 'Lora', sans-serif;
   font-size: 16px;
   line-height: 140%;
   color: #8E9295;
+  padding: 14px 20px;
 }
