--- a/src/styles/blocks/user/__lobby/user__lobby.css
+++ b/src/styles/blocks/user/__lobby/user__lobby.css
@@ -1,4 +1,7 @@
 .user__lobby {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  row-gap: 20px;  
+  max-width: 255px;
+  margin: 0 auto;
 }
