--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
 @import url(./styles/blocks/petitions/__data/petitions__data.css);
 @import url(./styles/blocks/petitions/__rating/petitions__rating.css);
 @import url(./styles/blocks/petitions/__text/petitions__text.css);
+@import url(./styles/blocks/petitions/__container/petitions__container.css);
 @import url(./styles/blocks/petitions/__container/_title/petitions__container_title.css);
 @import url(./styles/blocks/petitions/__container/_rating/petitions__container_rating.css);
 @import url(./styles/blocks/petitions/__image/petitions__image.css);
