--- a/src/styles/blocks/petitions/petitions.css
+++ b/src/styles/blocks/petitions/petitions.css
@@ -1,5 +1,5 @@
 .petitions {
-  max-width: 1110px;
+  max-width: 100%;
   margin: 40px auto 94px;
   display: grid;
   grid-template-columns: repeat(auto-fill, 350px);
