--- a/src/styles/blocks/petitions/__item/petitions__item.css
+++ b/src/styles/blocks/petitions/__item/petitions__item.css
@@ -3,8 +3,19 @@
   background-color:#F4F4F4;
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.15);
   overflow: hidden;
-  width: 350px;
   height: 350px;
   position: relative;
   cursor: pointer;
+}
+
+.petitions__item::after {
+  content: '';
+  position: absolute;
+  display: block;
+  left: 0;
+  bottom: 0;
+  width: 50px;
+  height: 50px;
+  background: #8E9295;
+  opacity: .5;
 }
