--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,14 @@
 @import url(./styles/blocks/header/__add-btn/header__add-btn.css);
 @import url(./styles/blocks/main/main.css);
 @import url(./styles/blocks/footer/footer.css);
+@import url(./styles/blocks/categories/categories.css);
+@import url(./styles/blocks/categories/__item/categories__item.css);
+@import url(./styles/blocks/categories/__item/_content/categories__item_content_all.css);
+@import url(./styles/blocks/categories/__item/_content/categories__item_content_culture.css);
+@import url(./styles/blocks/categories/__item/_content/categories__item_content_politics.css);
+@import url(./styles/blocks/categories/__item/_content/categories__item_content_social.css);
+@import url(./styles/blocks/categories/__item/_content/categories__item_content_transport.css);
+@import url(./styles/blocks/categories/__item/_active/categories__item_active.css);
 @import url(./styles/blocks/petitions/petitions.css);
 @import url(./styles/blocks/petitions/__item/petitions__item.css);
 @import url(./styles/blocks/petitions/__title/petitions__title.css);
