--- a/src/styles/blocks/petitions/__container/_rating/petitions__container_rating.css
+++ b/src/styles/blocks/petitions/__container/_rating/petitions__container_rating.css
@@ -1,7 +1,7 @@
 .petitions__container_rating {
   top: 145px;
   left: 10px;
-  background: #C1A60A;
+  background: #8E9295;
   width: 145px;
   height: 30px;
   padding: 0 10px;
