--- a/src/styles/blocks/user/__input/_password/user__input_password.css
+++ b/src/styles/blocks/user/__input/_password/user__input_password.css
@@ -1,4 +1,5 @@
 .user__input_password {
-  background: url('../../../../images/user__eye.png') #F4F4F4 no-repeat center right;
+  background: url('../../../../images/user__eye.png') #FDFDFD no-repeat center right;
   background-origin: content-box;
+  margin-bottom: 40px;
 }
