--- a/src/styles/blocks/user/__question/user__question.css
+++ b/src/styles/blocks/user/__question/user__question.css
@@ -1,9 +1,8 @@
 .user__question {
-  margin-top: auto;
-  margin-bottom: 40px;
-
   font-family: 'Lora', sans-serif;
   font-size: 16px;
   line-height: 140%;
+  text-align: center;
   color: #8E9295;
+  margin-top: 20px;
 }
