--- a/src/styles/blocks/user/user.css
+++ b/src/styles/blocks/user/user.css
@@ -1,6 +1,4 @@
 .user {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  flex: 1;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
