--- a/src/styles/blocks/sign-in-up-req/__description/sign-in-up-req__description.css
+++ b/src/styles/blocks/sign-in-up-req/__description/sign-in-up-req__description.css
@@ -1,9 +1,10 @@
 .sign-in-up-req__description {
   white-space: pre-line;
   margin: 0;
+  font-family: 'Lora', sans-serif;
   font-size: 24px;
+  line-height: 140%;
   font-weight: 500;
-  line-height: 33px;
   color: #101010;
   margin-bottom: 60px;
 }
