--- a/src/styles/blocks/opened-petition/__author/opened-petition__author.css
+++ b/src/styles/blocks/opened-petition/__author/opened-petition__author.css
@@ -3,4 +3,9 @@
   line-height: 22px;
   margin-right: 7%;
   margin-bottom: 21px;
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 140%;
+  color: #101010;
 }
