--- a/src/styles/blocks/opened-petition/__date/opened-petition__date.css
+++ b/src/styles/blocks/opened-petition/__date/opened-petition__date.css
@@ -1,5 +1,6 @@
 .opened-petition__date {
+  font-family: 'Lora', sans-serif;
   font-size: 20px;
-  color: white;
-  line-height: 24px;
+  line-height: 120%;
+  color: #FDFDFD;
 }
