--- a/src/styles/blocks/opened-petition/__text/opened-petition__text.css
+++ b/src/styles/blocks/opened-petition/__text/opened-petition__text.css
@@ -1,5 +1,9 @@
 .opened-petition__text {
+  max-width: 445px;
   white-space: pre-line;
+  font-family: 'Lora', sans-serif;
+  font-weight: 500;
   font-size: 24px;
-  line-height: 34px;
+  line-height: 140%;
+  margin-left: -40px;
 }
