--- a/src/styles/blocks/sign-in-up-req/__title/sign-in-up-req__title.css
+++ b/src/styles/blocks/sign-in-up-req/__title/sign-in-up-req__title.css
@@ -1,9 +1,9 @@
 .sign-in-up-req__title {
   white-space: pre-line;
+  font-family: 'Open Sans Condensed', sans-serif;
   font-size: 40px;
-  line-height: 48px;
-  margin: 0;
+  line-height: 120%;
   font-weight: 700;
-  color: #101010;
+  margin: 0;
   margin-bottom: 30px;
 }
