--- a/src/styles/blocks/add-new/__image/add-new__image.css
+++ b/src/styles/blocks/add-new/__image/add-new__image.css
@@ -1,20 +1,22 @@
 .add-new__image {
   position: relative;
-  width: 100%;
-  height: 350px;
   background: #F4F4F4;
   cursor: pointer;
-  margin-bottom: 40px;
+  grid-column: 1/3;
+  grid-row: 2/4;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .add-new__image:before {
   content: '';
   display: block;
-  width: 100px;
-  height: 100px;
+  width: 60px;
+  height: 60px;
   position: absolute;
-  left: calc(50% - 50px);
-  top: calc(50% - 50px);
+  left: calc(50% - 30px);
+  top: calc(50% - 30px);
   background-image: url("../../../images/add-new__image-btn.svg");
   background-repeat: no-repeat;
   background-size: cover;
