--- a/src/styles/blocks/add-new/__input/add-new__input.css
+++ b/src/styles/blocks/add-new/__input/add-new__input.css
@@ -1,7 +1,12 @@
 .add-new__input {
-  width: 47.2%;
-  height: 100px;
-  overflow-y: scroll;
+  font-family: 'Lora', sans-serif;
+  font-size: 16px;
+  line-height: 140%;
+  color: #8E9295;
   box-sizing: border-box;
-  margin-bottom: 20px;
+  resize: none;
+  padding: 20px;
+  border: 2px solid #8E9295;
+  grid-column: 1/3;
+  grid-row: 1/2;
 }
