--- a/src/styles/blocks/button/button.css
+++ b/src/styles/blocks/button/button.css
@@ -3,7 +3,7 @@
   background-image: linear-gradient(to right, #8E4FF6, #4F92F6);
   border: none;
   outline: none;
-  font-family: 'Open Sans Condensed';
+  font-family: 'Open Sans Condensed', sans-serif;
   font-size: 22px;
   line-height: 140%;
   font-weight: 700;
@@ -12,4 +12,5 @@
   align-items: center;
   justify-content: center;
   color: white;
+  cursor: pointer;
 }
