--- a/src/styles/blocks/opened-petition/__image/opened-petition__image.css
+++ b/src/styles/blocks/opened-petition/__image/opened-petition__image.css
@@ -2,9 +2,10 @@
   position: relative;
   width: 86%;
   height: 350px;
-  margin-bottom: 22px;
+  margin: -22px 0 0;
   background-image: url('../../../images/opened-petition__image.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  align-self: center;
 }
