--- a/src/styles/blocks/opened-petition/__title/opened-petition__title.css
+++ b/src/styles/blocks/opened-petition/__title/opened-petition__title.css
@@ -1,10 +1,10 @@
 .opened-petition__title {
-  white-space: pre-line;
+  grid-column: 1/3;
+  grid-row: 1/2;
   font-family: 'Open Sans Condensed', sans-serif;
   font-weight: bold;
   font-size: 50px;
   line-height: 110%;
-  margin: 0;
-  color: #FDFDFD;
-  margin-bottom: 40px;
+  margin: 0 0 10px;
+  white-space: pre-line;
 }
