--- a/src/styles/blocks/page/page.css
+++ b/src/styles/blocks/page/page.css
@@ -2,11 +2,11 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-width: 1280px;
+  max-width: 1110px;
   margin: 0 auto;
-  outline: 2px solid black;
+  /* outline: 2px solid black; */
   min-height: 100vh;
   background: #fff;
-  padding: 0px 5.4%;
+  padding: 0px;
   box-sizing: border-box;
 }
