--- a/src/styles/blocks/petitions/__container/_rating/petitions__container_rating.css
+++ b/src/styles/blocks/petitions/__container/_rating/petitions__container_rating.css
@@ -1,10 +1,11 @@
 .petitions__container_rating {
-  top: 145px;
-  left: 10px;
+  grid-column: 1/2;
+  grid-row: 2/3;
+  display: flex;
+  justify-content: space-between;
   background: #8E9295;
-  width: 145px;
   height: 30px;
-  padding: 0 10px;
+  padding: 0 10%;
 }
 
 .petitions__item_type_culture .petitions__container_rating {
