--- a/src/styles/blocks/petitions/__title/petitions__title.css
+++ b/src/styles/blocks/petitions/__title/petitions__title.css
@@ -1,9 +1,10 @@
 .petitions__title {
+  grid-column: 1/3;
+  grid-row: 1/2;
   font-family: 'Open Sans Condensed', sans-serif;
   font-weight: bold;
   font-size: 30px;
   line-height: 110%;
-  width: 150px;
-  max-height: 132px;
+  min-height: 135px;
   margin: 0;
 }
