--- a/src/styles/blocks/petitions/petitions.css
+++ b/src/styles/blocks/petitions/petitions.css
@@ -2,7 +2,13 @@
   max-width: 100%;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(auto-fill, 350px);
+  grid-template-columns: repeat(3, minmax(300px, 350px));
   grid-template-rows: repeat(auto-fill, 350px);
-  gap: 30px;
+  grid-gap: 30px;
+}
+
+@media screen and (max-width: 940px) {
+  .petitions {
+    grid-template-columns: repeat(2, minmax(300px, 350px));
+  }
 }
