--- a/src/styles/blocks/opened-petition/__text/opened-petition__text.css
+++ b/src/styles/blocks/opened-petition/__text/opened-petition__text.css
@@ -1,7 +1,8 @@
 .opened-petition__text {
   font-weight: 500;
-  font-size: 20px;
+  font-size: 24px;
   line-height: 140%;
   white-space: pre-line;
   margin: 0;
+  padding: 20px 20px 50px 20px;
 }
