--- a/src/styles/blocks/opened-petition/__title/opened-petition__title.css
+++ b/src/styles/blocks/opened-petition/__title/opened-petition__title.css
@@ -1,10 +1,8 @@
 .opened-petition__title {
-  grid-column: 1/3;
-  grid-row: 1/2;
   font-family: 'Open Sans Condensed', sans-serif;
   font-weight: bold;
-  font-size: 50px;
-  line-height: 110%;
-  margin: 0 0 10px;
+  font-size: 40px;
+  line-height: 120%;
+  margin: 0;
   white-space: pre-line;
 }
