--- a/src/styles/blocks/user/__input/_password/user__input_password.css
+++ b/src/styles/blocks/user/__input/_password/user__input_password.css
@@ -1,3 +1,11 @@
 .user__input_password {
-  margin-bottom: 40px;
+  margin-bottom: 0;
+}
+
+.user__input_password:hover {
+  outline: none;
+}
+
+.user__input_password:focus {
+  outline: none;
 }
