--- a/src/styles/blocks/user/__toggle-pass-btn/user__toggle-pass-btn.css
+++ b/src/styles/blocks/user/__toggle-pass-btn/user__toggle-pass-btn.css
@@ -1,4 +1,7 @@
 .user__toggle-pass-btn {
+  position: absolute;
+  right: 20px;
+  top: 12px;
   background: none;
   border: none;
   outline: none;
