--- a/src/styles/blocks/petitions/__container/_title/petitions__container_title.css
+++ b/src/styles/blocks/petitions/__container/_title/petitions__container_title.css
@@ -1,40 +1,7 @@
 .petitions__container_title {
-  background: #8E9295;
+  min-height: 120px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, max-content);
-  height: 220px;
-  padding: 10px 10px 45px;
-  box-sizing: border-box;
-}
-
-.petitions__container_title::after {
-  content: '';
-  position: absolute;
-  top: 95px;
-  right: 10px;
-  background: url(../../../../images/ellipse.png);
-  background-size: cover;
-  width: 50px;
-  height: 50px;
-}
-
-.petitions__item_type_culture .petitions__container_title {
-  background: #F66D4F;
-  color: black;
-}
-
-.petitions__item_type_politics .petitions__container_title {
-  background: #4F92F6;
-  color: white;
-}
-
-.petitions__item_type_social .petitions__container_title {
-  background: #F6DD4F;
-  color: black;
-}
-
-.petitions__item_type_transport .petitions__container_title {
-  background: #8E4FF6;
-  color: white;
+  margin: 20px 20px 15px;
 }
