--- a/src/styles/blocks/button/button.css
+++ b/src/styles/blocks/button/button.css
@@ -3,7 +3,7 @@
   background-image: linear-gradient(to right, #8E4FF6, #4F92F6);
   border: none;
   outline: none;
-  font-family: 'Open Sans Condensed', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   font-size: 22px;
   line-height: 140%;
   font-weight: 700;
@@ -13,4 +13,6 @@
   justify-content: center;
   color: white;
   cursor: pointer;
+  box-shadow: 0px 4px 10px rgba(153, 162, 255, 0.6);
+  border-radius: 5px;
 }
