--- a/src/styles/blocks/categories/__item/categories__item.css
+++ b/src/styles/blocks/categories/__item/categories__item.css
@@ -1,24 +1,29 @@
 .categories__item {
-  background: #8E9295;
-  height: 50px;
-  flex: 2;
-  display: flex;
-  align-items: flex-end;
-  justify-content: center;
-  font-size: 26px;
-  font-weight: 700;
-  line-height: 36px;
-  padding-bottom: 6px;
-  box-sizing: border-box;
-  cursor: pointer;
-  transition: all .5s ease;
-  font-family: 'Open Sans Condensed', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   font-weight: bold;
-  font-size: 26px;
+  font-size: 21px;
   line-height: 140%;
-  color: #FDFDFD;
+  text-align: center;
+  color: #5D7DAD;
+  cursor: pointer;
+  position: relative;
 }
 
-.categories__item:hover {
-  height: 100%;
+.categories__item:before {
+  content: '';
+  position: absolute;
+  bottom: -13px;
+  left: 0px;
+  width: 100%;
+  height: 5px;
+  background: #632EBA;
+  display: block;
+  transform-origin: right top;
+  transform: scale(0, 1);
+  transition: transform 0.4s cubic-bezier(1, 0, 0, 1)
+}
+
+.categories__item:hover::before {
+  transform-origin: left top;
+  transform: scale(1, 1)
 }
