--- a/src/styles/blocks/header/header.css
+++ b/src/styles/blocks/header/header.css
@@ -1,7 +1,10 @@
 .header {
-  padding-top: 40px;
+  width: 100%;
+  max-width: 1200px;
   display: flex;
-  align-items: flex-end;
   justify-content: space-between;
-  margin-bottom: 40px;
+  padding-top: 30px;
+  margin: 0 auto 30px;
+
+  font-family: 'Open Sans Condensed', sans-serif;
 }
