--- a/src/styles/blocks/petitions/__image/petitions__image.css
+++ b/src/styles/blocks/petitions/__image/petitions__image.css
@@ -1,9 +1,8 @@
 .petitions__image {
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
-  width: calc(100% - 20px);
-  height: 44%;
+  max-width: 100%;
+  height: 155px;
+  margin: 0 10px 10px;
   object-fit: cover;
   object-position: center;
+  border-radius: 2px;
 }
