--- a/src/styles/blocks/petitions/__item/petitions__item.css
+++ b/src/styles/blocks/petitions/__item/petitions__item.css
@@ -1,21 +1,11 @@
 .petitions__item {
-  background: url(../../../images/ellipse.png) no-repeat 10px 10px;
-  background-color:#F4F4F4;
-  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.15);
-  overflow: hidden;
-  height: 350px;
+  background: #F4F5FF;
+  min-height: 350px;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-shadow: 0px 0px 14px #C9CEFF;
+  border-radius: 10px;
   cursor: pointer;
-}
-
-.petitions__item::after {
-  content: '';
-  position: absolute;
-  display: block;
-  left: 0;
-  bottom: 0;
-  width: 50px;
-  height: 50px;
-  background: #8E9295;
-  opacity: .5;
 }
