--- a/src/styles/blocks/sign-in-up-req/__title/sign-in-up-req__title.css
+++ b/src/styles/blocks/sign-in-up-req/__title/sign-in-up-req__title.css
@@ -1,9 +1,6 @@
 .sign-in-up-req__title {
-  white-space: pre-line;
-  font-family: 'Open Sans Condensed', sans-serif;
-  font-size: 40px;
+  font-weight: 500;
+  font-size: 30px;
   line-height: 120%;
-  font-weight: 700;
-  margin: 0;
-  margin-bottom: 30px;
+  margin: 50px 0 0;
 }
