--- a/src/styles/blocks/sign-in-up-req/sign-in-up-req.css
+++ b/src/styles/blocks/sign-in-up-req/sign-in-up-req.css
@@ -1,7 +1,7 @@
 .sign-in-up-req {
-  position: relative;
   max-width: 100%;
-  background: #F4F4F4;
-  display: flex;
-  flex-direction: row;
+  background: #F4F5FF;
+
+  font-family: 'Ubuntu', sans-serif;
+  color: #101010;
 }
