--- a/src/styles/blocks/user/__input/user__input.css
+++ b/src/styles/blocks/user/__input/user__input.css
@@ -1,13 +1,16 @@
 .user__input {
   background: #FDFDFD;
+  width: 100%;
   border: none;
-  font-family: 'Lora', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   font-size: 16px;
   line-height: 140%;
   color: #8E9295;
   padding: 14px 20px;
   margin-bottom: 20px;
   box-sizing: border-box;
+  box-shadow: 0px 4px 15px rgba(153, 162, 255, 0.3);
+  border-radius: 2px;
 }
 
 .user__input:hover {
