--- a/src/styles/blocks/add-new/__form/add-new__form.css
+++ b/src/styles/blocks/add-new/__form/add-new__form.css
@@ -1,9 +1,11 @@
 .add-new__form {
+  width: 100%;
+  max-width: 1200px;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, max-content);
-  gap: 30px;
-  margin: 0 0 60px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(4, max-content);
+  grid-gap: 20px 30px;
+  margin: 0 auto 60px;
   padding: 0;
   font-family: 'Lora', sans-serif;
   font-size: 16px;
