--- a/src/styles/blocks/add-new/__image/add-new__image.css
+++ b/src/styles/blocks/add-new/__image/add-new__image.css
@@ -1,9 +1,10 @@
 .add-new__image {
   position: relative;
-  background: #F4F4F4;
+  width: 100%;
+  height: 228px;
+  background: rgba(215, 229, 250, 0.25);
+  border-radius: 5px;
   cursor: pointer;
-  grid-column: 1/3;
-  grid-row: 2/4;
   display: flex;
   align-items: center;
   justify-content: center;
