--- a/src/styles/blocks/add-new/__input/add-new__input.css
+++ b/src/styles/blocks/add-new/__input/add-new__input.css
@@ -1,14 +1,14 @@
 .add-new__input {
-  font-family: 'Lora', sans-serif;
-  font-size: 16px;
-  line-height: 140%;
-  color: #8E9295;
+  width: 100%;
+  height: 255px;
+  border: 2px solid rgba(28, 69, 131, 0.5);
   box-sizing: border-box;
-  resize: none;
   padding: 20px;
-  border: 2px solid #8E9295;
-  grid-column: 1/3;
-  grid-row: 1/2;
+  border-radius: 5px;
+  font-size: 20px;
+  line-height: 140%;
+  margin: 25px 0 10px;
+  resize: none;
 }
 
 .add-new__input:hover {
