--- a/src/styles/blocks/add-new/__poem-title/add-new__poem-title.css
+++ b/src/styles/blocks/add-new/__poem-title/add-new__poem-title.css
@@ -1,8 +1,11 @@
 .add-new__poem-title {
-  grid-column: 3/5;
-  grid-row: 1/2;
-  border: 2px solid #8E9295;
-  margin: 0;
-  padding: 20px;
+  width: 100%;
+  height: 255px;
+  border: 2px solid rgba(28, 69, 131, 0.5);
   box-sizing: border-box;
+  padding: 20px;
+  margin: 25px 0 10px;
+  border-radius: 5px;
+  font-size: 20px;
+  line-height: 140%;
 }
