--- a/src/styles/blocks/add-new/__select-cat/add-new__select-cat.css
+++ b/src/styles/blocks/add-new/__select-cat/add-new__select-cat.css
@@ -1,11 +1,8 @@
-.add-new__item {
+.add-new__select-cat {
+  grid-column: 1/3;
   font-family: 'Lora', sans-serif;
   font-size: 16px;
   line-height: 140%;
   color: #101010;
-}
-
-.add-new__item:nth-child(3) {
-  grid-column: 2/3;
-  grid-row: 1/2;
+  margin: 0;
 }
