--- a/src/styles/blocks/button/_withborder/button_withborder.css
+++ b/src/styles/blocks/button/_withborder/button_withborder.css
@@ -1,9 +1,9 @@
 .button_withborder {
   background-image: none;
   background-color: white;
-  border: 2px solid transparent;
-  border-image: linear-gradient(89.87deg, #8E4FF6 26.68%, #4F92F6 92.81%);
-  border-image-slice: 1;
+  border: 2px solid #3756FF;
+  box-shadow: 0px 4px 10px rgba(153, 162, 255, 0.3);
+  border-radius: 2px;
   color: #101010;
   padding: 0 20px;
 }
