--- a/src/styles/blocks/header/__login/header__login.css
+++ b/src/styles/blocks/header/__login/header__login.css
@@ -1,6 +1,6 @@
 .header__login {
   font-weight: bold;
-  font-size: 30px;
+  font-size: 16px;
   line-height: 110%;
-  color: #4F92F6;
+  color: #5D7DAD;
 }
