--- a/src/styles/blocks/opened-petition/__author/opened-petition__author.css
+++ b/src/styles/blocks/opened-petition/__author/opened-petition__author.css
@@ -1,9 +1,6 @@
 .opened-petition__author {
-  align-self: flex-end;
-  line-height: 22px;
-  font-family: 'Open Sans Condensed', sans-serif;
-  font-weight: bold;
-  font-size: 22px;
+  font-size: 23px;
   line-height: 140%;
-  color: #101010;
+  color: #02214F;
+  margin: 0 0 40px;
 }
