--- a/src/styles/blocks/opened-petition/__image/opened-petition__image.css
+++ b/src/styles/blocks/opened-petition/__image/opened-petition__image.css
@@ -1,11 +1,11 @@
 .opened-petition__image {
   position: relative;
-  width: 86%;
   height: 350px;
-  margin: -22px 0 0;
+  margin: 30px 0 0;
   background-image: url('../../../images/opened-petition__image.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   align-self: center;
+  border-radius: 2px;
 }
