--- a/src/styles/blocks/opened-petition/opened-petition.css
+++ b/src/styles/blocks/opened-petition/opened-petition.css
@@ -1,18 +1,11 @@
 .opened-petition {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  background: #F4F4F4;
-}
-
-.opened-petition::after {
-  content: '';
-  position: absolute;
-  display: block;
-  left: 0;
-  bottom: 0;
-  width: 160px;
-  height: 160px;
-  background: #8E9295;
-  opacity: .5;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  background: #F4F5FF;
+  box-shadow: 0px 4px 10px rgba(221, 224, 255, 0.4);
+  border-radius: 10px;
+  filter: drop-shadow(0px 4px 10px rgba(221, 224, 255, 0.4));
+  box-sizing: border-box;
+  padding: 50px 70px 30px;
 }
