--- a/src/styles/blocks/footer/footer.css
+++ b/src/styles/blocks/footer/footer.css
@@ -1,4 +1,14 @@
 .footer {
-  margin-top: auto;
-  background: hotpink;
+  width: 100%;
+  background: #dde0ff;
+  opacity: 0.9;
+  box-sizing: border-box;
+  padding: 30px 20px 15px;
+  color: #02214f;
+}
+
+@media screen and (max-width: 720px) {
+  .footer {
+    padding: 39px 20px 20px;
+  }
 }
