--- a/src/index.css
+++ b/src/index.css
@@ -114,3 +114,4 @@
 
 @import url(./styles/blocks/popup/popup.css);
 @import url(./styles/blocks/popup/__text/popup__text.css);
+@import url(./styles/blocks/hidden/hidden.css);
