--- a/src/styles/blocks/add-new/__form/add-new__form.css
+++ b/src/styles/blocks/add-new/__form/add-new__form.css
@@ -12,3 +12,11 @@
   line-height: 140%;
   color: #8E9295;
 }
+
+@media screen and (max-width: 720px) {
+  .add-new__form {
+    grid-template-columns: 1fr;
+    grid-gap: 0;
+    margin: 0 auto;
+  }
+}
