--- a/src/styles/blocks/add-new/__image-text/add-new__image-text.css
+++ b/src/styles/blocks/add-new/__image-text/add-new__image-text.css
@@ -13,3 +13,9 @@
 .add-new__image_loaded .add-new__image-text {
   opacity: 0;
 }
+
+@media screen and (max-width: 720px) {
+  .add-new__image-text {
+    display: none;
+  }
+}
