--- a/src/styles/blocks/categories/__item/_active/categories__item_active.css
+++ b/src/styles/blocks/categories/__item/_active/categories__item_active.css
@@ -1,2 +1,7 @@
-.categories__item_active {
+.categories_place_feed .categories__item_active::after {
+  width: 100%;
+}
+
+.categories_place_add-new .categories__item_active {
+  border: solid 2px #632EBA;
 }
