--- a/src/styles/blocks/sign-in-up-req/sign-in-up-req.css
+++ b/src/styles/blocks/sign-in-up-req/sign-in-up-req.css
@@ -1,7 +1,8 @@
 .sign-in-up-req {
   max-width: 100%;
   background: #F4F5FF;
-
+  box-sizing: border-box;
+  padding: 0px 20px;
   font-family: 'Ubuntu', sans-serif;
-  color: #101010;
+  color: #02214F;
 }
