--- a/src/styles/blocks/sign-in-up-req/__container/sign-in-up-req__container.css
+++ b/src/styles/blocks/sign-in-up-req/__container/sign-in-up-req__container.css
@@ -7,3 +7,10 @@
   row-gap: 35px;
   margin: 0 auto;
 }
+
+@media screen and (max-width: 720px) {
+  .sign-in-up-req__container {
+    grid-template-columns: 1fr;
+    row-gap: 10px;
+  }
+}
