--- a/src/styles/blocks/sign-in-up-req/__image/sign-in-up-req__image.css
+++ b/src/styles/blocks/sign-in-up-req/__image/sign-in-up-req__image.css
@@ -2,4 +2,15 @@
   grid-column: 2/3;
   grid-row: 1/4;
   justify-self: center;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+@media screen and (max-width: 720px) {
+  .sign-in-up-req__image {
+    grid-row: 1/2;
+    grid-column: 1/2;
+    height: auto;
+  }
 }
