--- a/src/styles/blocks/sign-in-up-req/__title/sign-in-up-req__title.css
+++ b/src/styles/blocks/sign-in-up-req/__title/sign-in-up-req__title.css
@@ -1,6 +1,13 @@
 .sign-in-up-req__title {
-  font-weight: 500;
+  font-weight: 700;
   font-size: 30px;
   line-height: 120%;
   margin: 50px 0 0;
+}
+
+@media screen and (max-width: 720px) {
+  .sign-in-up-req__title {
+    font-size: 18px;
+    margin: 0;
+  }
 }
