--- a/src/styles/blocks/user/__button/user__button.css
+++ b/src/styles/blocks/user/__button/user__button.css
@@ -1,3 +1,10 @@
 .user__button {
   width: 255px;
 }
+
+@media screen and (max-width: 720px) {
+  .user__button {
+    width: 180px;
+    height: 40px;
+  }
+}
