--- a/src/styles/blocks/user/__input/user__input.css
+++ b/src/styles/blocks/user/__input/user__input.css
@@ -20,3 +20,11 @@
 .user__input:focus {
   outline: 2px solid #8E9295;
 }
+
+@media screen and (max-width: 720px) {
+  .user__input {
+    height: 30px;
+    padding: 5px 10px;
+    margin-bottom: 15px;
+  }
+}
