--- a/src/styles/blocks/header/__log-container/header__log-container.css
+++ b/src/styles/blocks/header/__log-container/header__log-container.css
@@ -1,6 +1,10 @@
 .header__log-container {
+  position: absolute;
+  bottom: -150px;
+  left: -200px;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0 30px;
+  flex-direction: column;
+  background: #F4F5FF;
+  text-align: start;
+  padding: 30px 20px 24px 20px;
 }
