--- a/src/styles/blocks/header/__log-container/header__log-container.css
+++ b/src/styles/blocks/header/__log-container/header__log-container.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   background: #F4F5FF;
+  box-shadow: 5px 5px 24px rgba(93, 125, 173, .6);
   text-align: start;
   padding: 30px 20px 24px 20px;
 }
