--- a/src/styles/blocks/header/__user-name/header__user-name.css
+++ b/src/styles/blocks/header/__user-name/header__user-name.css
@@ -1,6 +1,18 @@
 .header__user-name {
   font-weight: bold;
-  font-size: 16px;
+  font-size: 22px;
+  font-weight: 700;
   line-height: 110%;
   color: #5D7DAD;
+  position: relative;
+  margin-bottom: 32px;
+}
+
+.header__user-name::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  left: 0;
+  bottom: -10px;
+  border-bottom: 1px solid #5D7DAD;
 }
